--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,1 +1,33 @@
+name: Python application
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pytest pylint
+
+      - name: Run tests
+        run: pytest test_prime.py
+
+      - name: Run pylint
+        run: pylint prime.py
 
